--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "three": "^0.164.1",
     "three-gltf-loader": "^1.111.0",
     "web-vitals": "^2.1.4"
